style.css
.container {
    display: grid;
    grid-template-areas:
      "header header"
      "menu content"
      "footer footer";
    grid-template-columns: 1fr 3fr;
    height: 100vh;
    gap: 3px;
    background-color: black;
    padding: 5px;
  }
  .container div {
    background-color: white;
    padding: 10px;
  }
  .container div.header {
    grid-area: header;
    text-align: center;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  }
  .container div.menu {
    grid-area: menu;
  }
  .container div.content {
    grid-area: content;
    font-family: 'Inter';
    
  }
  .container div.footer {
    grid-area: footer;
    text-align: center;  
  }

  h3 {
    text-align: center;
  }

